Fix overlapping of footer for real

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,7 +36,7 @@ body {
 
 
   min-height: 100%;
-  height: calc(100% + 105px);
+  height: calc(100% + 82px);
   margin-bottom: -275px;
 
   &:after {
